# open-mpic-fastapi-docker

./: .gitignore  .gitmodules  README.md
.devcontainer/: devcontainer.json  pyenv.sh
.github/workflows/: build.yml
api-implementation/: Dockerfile  README.md  pyproject.toml
api-implementation/coordinator/: README.md
api-implementation/src/mpic_caa_checker_service/: README.md  requirements.txt
api-implementation/src/mpic_caa_checker_service/app/: main.py
api-implementation/src/mpic_caa_checker_service/config/: app.conf
api-implementation/src/mpic_coordinator_service/: Dockerfile  requirements.txt
api-implementation/src/mpic_coordinator_service/app/: configuration_model.py  main.py
api-implementation/src/mpic_coordinator_service/config/: app.conf
api-implementation/src/mpic_coordinator_service/resources/: available_perspectives.yaml
api-implementation/src/mpic_dcv_checker_service/: README.md
api-implementation/src/mpic_dcv_checker_service/app/: main.py
api-implementation/src/mpic_dcv_checker_service/config/: app.conf
api-implementation/tests/integration/: test_deployed_mpic_api.py  testing_api_client.py
api-implementation/tests/unit/: test_mpic_coordinator_service.py
api_implementation/: pyproject.toml
api_implementation/src/mpic_caa_checker_service/: Dockerfile
api_implementation/src/mpic_caa_checker_service/config/: app.conf
api_implementation/src/mpic_coordinator_service/: Dockerfile
api_implementation/src/mpic_coordinator_service/app/: main.py
caa/: Dockerfile  README.md  requirements.txt
caa/app/: main.py
caa/config/: app.conf
coordinator/: Dockerfile  README.md  requirements.txt
coordinator/app/: main.py
coordinator/config/: app.conf
dcv/: Dockerfile  README.md  requirements.txt
dcv/app/: main.py
dcv/config/: app.conf
deployment-examples/amazon-ec2/: .gitignore  README.md  ami-info.txt  compose.yaml.template  config.example.yaml  configure.py  install.py  mpic-site.conf.template
deployment-examples/amazon-ec2/open-tofu/: aws-ec2-instance.tf.template  aws-ec2-region.tf.template  locals.tf  startup.tftpl
deployment-examples/docker-compose/: compose.yml
deployment-examples/local-docker-compose/: README.md  compose.example.yml
deployment-examples/local-docker-compose/resources/: available_perspectives.example.yaml
deployment_examples/amazon-ec2/: aws_region_config.yaml  get_ips.py  ssh_utils.py
examples/: compose.yml
examples/docker-compose/: README.md  compose.yml
